# storage/api-docs/api-docs.json
@@ -37,7 +37,7 @@
                     }
                 },
                 "responses": {
-                    "204": {
+                    "200": {
                         "description": "Returns User Model And Access Token",
                         "content": {
                             "application/json": {
@@ -137,7 +137,7 @@
                     }
                 },
                 "responses": {
-                    "204": {
+                    "201": {
                         "description": "Returns User Model And Access Token",
                         "content": {
                             "application/json": {
